fix layout; remove unnecessary align-items property from body

--- a/style.css
+++ b/style.css
@@ -193,7 +193,6 @@ body
 {
     width:100%;
     margin:auto;
-    align-items: center;
 }
 .project-grid
 {
